Moving editor action names to CodeEditorLocalize (part 1). (#870)