@@ -23,21 +23,24 @@ import consulo.codeEditor.action.EditorLastActionTracker;
 import consulo.dataContext.DataContext;
 import consulo.ui.ex.action.IdeActions;
 import consulo.util.dataholder.Key;
+import jakarta.annotation.Nonnull;
 import jakarta.annotation.Nullable;
 
-import java.util.*;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.Set;
 
 public class CloneCaretActionHandler extends EditorActionHandler {
     private static final Key<Integer> LEVEL = Key.create("CloneCaretActionHandler.level");
 
-    private static final Set<String> OUR_ACTIONS = new HashSet<>(Arrays.asList(
+    private static final Set<String> OUR_ACTIONS = Set.of(
         IdeActions.ACTION_EDITOR_CLONE_CARET_ABOVE,
         IdeActions.ACTION_EDITOR_CLONE_CARET_BELOW,
         IdeActions.ACTION_EDITOR_MOVE_CARET_LEFT_WITH_SELECTION,
         IdeActions.ACTION_EDITOR_MOVE_CARET_RIGHT_WITH_SELECTION,
         IdeActions.ACTION_EDITOR_MOVE_LINE_START_WITH_SELECTION,
         IdeActions.ACTION_EDITOR_MOVE_LINE_END_WITH_SELECTION
-    ));
+    );
 
     private final boolean myCloneAbove;
 
@@ -51,7 +54,7 @@ public class CloneCaretActionHandler extends EditorActionHandler {
     }
 
     @Override
-    protected void doExecute(Editor editor, @Nullable Caret targetCaret, DataContext dataContext) {
+    protected void doExecute(@Nonnull Editor editor, @Nullable Caret targetCaret, DataContext dataContext) {
         if (targetCaret != null) {
             targetCaret.clone(myCloneAbove);
             return;
